Testing after DNS

--- a/public/index.html
+++ b/public/index.html
@@ -476,14 +476,24 @@
                     </div>
                     <div class="card-body">
                         <p>Grade 12 Mathematics topics covered:</p>
+                        <h2>Paper 1</h2>
                         <ul>
-                            <li><i class="fas fa-check-circle"></i> Calculus & Algebra</li>
+                            <li><i class="fas fa-check-circle"></i> Algebra, Equations & Inequalities</li>
+                            <li><i class="fas fa-check-circle"></i> Patterns, Sequences and Series </li>
+                            <li><i class="fas fa-check-circle"></i> Finance, Growth & Decay</li>
                             <li><i class="fas fa-check-circle"></i> Functions & Graphs</li>
-                            <li><i class="fas fa-check-circle"></i> Probability & Statistics</li>
-                            <li><i class="fas fa-check-circle"></i> Geometry & Trigonometry</li>
+                            <li><i class="fas fa-check-circle"></i> Differential Calculus (limits, differentiation rules, etc.)</li>
                             <li><i class="fas fa-check-circle"></i> Exam Preparation</li>
                         </ul>
-                        <div class="price-tag">R300</div>
+                        <h2>Paper 2</h2>
+                        <ul>
+                            <li><i class="fas fa-check-circle"></i> Euclidean Geometry & Measurement</li>
+                            <li><i class="fas fa-check-circle"></i> Analytical Geometry(lines,circles,tangents,etc)</li>
+                            <li><i class="fas fa-check-circle"></i> Trigonometry (identities, compound/double angles, solving equations etc.)</li>
+                            <li><i class="fas fa-check-circle"></i> Statistics (data handling, regression, curve fitting etc.)</li>
+                            <li><i class="fas fa-check-circle"></i> Exam Preparation</li>
+                        </ul>
+                        <div class="price-tag">R350/month</div>
                     </div>
                 </div>
                 <div class="card physics-card">
@@ -492,14 +502,28 @@
                     </div>
                     <div class="card-body">
                         <p>Grade 12 Physics topics covered:</p>
+                        <h2>Physics(Paper1)</h2>
                         <ul>
-                            <li><i class="fas fa-check-circle"></i> Mechanics</li>
-                            <li><i class="fas fa-check-circle"></i> Waves, Sound & Light</li>
-                            <li><i class="fas fa-check-circle"></i> Electricity & Magnetism</li>
-                            <li><i class="fas fa-check-circle"></i> Modern Physics</li>
-                            <li><i class="fas fa-check-circle"></i> Past Paper Practice</li>
+                            <li><i class="fas fa-check-circle"></i> Momentum and impulse</li>
+                            <li><i class="fas fa-check-circle"></i> Vertical Projectile Motion in One Dimension </li>
+                            <li><i class="fas fa-check-circle"></i> Newton's Laws</li>
+                            <li><i class="fas fa-check-circle"></i> Work Energy and Power</li>
+                            <li><i class="fas fa-check-circle"></i> Doppler Effect</li>
+                            <li><i class="fas fa-check-circle"></i> Electric circuits</li>
+                            <li><i class="fas fa-check-circle"></i> Electrdynamics</li>
+                            <li><i class="fas fa-check-circle"></i> Photoelectric Effect</li>
+                            <li><i class="fas fa-check-circle"></i> Spectra(emission/absorption)</li>
+                            <li><i class="fas fa-check-circle"></i> Exam Preparation</li>
                         </ul>
-                        <div class="price-tag">R300</div>
+                        <h2>Physics(Paper2)</h2>
+                        <ul>
+                            <li><i class="fas fa-check-circle"></i> Rate and Extent of Reaction(Reaction Rate)</li>
+                            <li><i class="fas fa-check-circle"></i> Chemical Equilbrium</li>
+                            <li><i class="fas fa-check-circle"></i> Acids and Bases</li>
+                            <li><i class="fas fa-check-circle"></i> Galvanic and Electrolytic Cells</li>
+                            <li><i class="fas fa-check-circle"></i> Organic Chemistry</li>
+                            <li><i class="fas fa-check-circle"></i> Exam Preparation</li>
+                        <div class="price-tag">R350/month</div>
                     </div>
                 </div>
             </div>
@@ -528,7 +552,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Nqubeko Ngcece - STEM Tutor">
+                    <img src="/images/NqubekoStemPHOTO.jpg" alt="Nqubeko Ngcece - STEM Tutor">
                 </div>
             </div>
         </div>
@@ -565,11 +589,11 @@
                         <div class="checkbox-group">
                             <div class="checkbox-item">
                                 <input type="checkbox" id="maths" name="subjects" value="maths">
-                                <label for="maths">Mathematics (R300)</label>
+                                <label for="maths">Mathematics (R350)</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="physics" name="subjects" value="physics">
-                                <label for="physics">Physics (R300)</label>
+                                <label for="physics">Physics (R350)</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="both" name="subjects" value="both">
@@ -585,7 +609,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 STEMfactory Tutoring. All rights reserved.</p>
+            <p>&copy; 2025 STEMfactory Tutoring. All rights reserved.</p>
             <p>Contact: stemfactory27@gmail.com | WhatsApp: 0635837312</p>
         </div>
     </footer>
